# artinchip-hal

./: .gitignore  Cargo.toml  LICENSE-MIT  LICENSE-MULAN  README.md
.github/workflows/: Cargo.yml
aicfwc/: Cargo.toml
aicfwc/src/: main.rs
artinchip-hal/: Cargo.toml
artinchip-hal/src/: axi_cfg.rs  ce.rs  clic.rs  clint.rs  cmu.rs  dma.rs  gpio.rs  gtc.rs  i2c.rs  interrupt.rs  lib.rs  macros.rs  pad.rs  pwm.rs  qspi.rs  rtc.rs  sdmc.rs  sid.rs  spi_enc.rs  sys_cfg.rs  types.rs  uart.rs  wdog.rs  wri.rs  xspi.rs
artinchip-hal/src/axi_cfg/: instance.rs  register.rs
artinchip-hal/src/ce/: instance.rs  register.rs
artinchip-hal/src/clic/: instance.rs  register.rs
artinchip-hal/src/clint/: instance.rs  register.rs
artinchip-hal/src/cmu/: instance.rs  register.rs
artinchip-hal/src/dma/: channel.rs  dma_ext.rs  instance.rs  register.rs  task.rs
artinchip-hal/src/gpio/: function.rs  input.rs  mod.rs  mode.rs  output.rs  pad.rs  pad_ext.rs  register.rs  set_mode.rs
artinchip-hal/src/gtc/: delay.rs  gtc_ext.rs  instance.rs  register.rs
artinchip-hal/src/i2c/: blocking.rs  config.rs  i2c_ext.rs  instance.rs  pad.rs  pin_mux.rs  register.rs
artinchip-hal/src/i2c/pin_mux/: d13x.rs  macros.rs
artinchip-hal/src/interrupt/: clic.rs
artinchip-hal/src/pwm/: config.rs  driver.rs  instance.rs  pad.rs  pwm_ext.rs  register.rs
artinchip-hal/src/qspi/: blocking.rs  config.rs  instance.rs  pad.rs  qspi_ext.rs  register.rs
artinchip-hal/src/qspi/pin_mux/: d13x.rs  macros.rs
artinchip-hal/src/rtc/: instance.rs  register.rs  rtc_ext.rs  time.rs
artinchip-hal/src/sdmc/: instance.rs  register.rs
artinchip-hal/src/sid/: instance.rs  register.rs
artinchip-hal/src/spi_enc/: instance.rs  register.rs
artinchip-hal/src/sys_cfg/: instance.rs  register.rs
artinchip-hal/src/types/: ring_buffer.rs
artinchip-hal/src/uart/: blocking.rs  config.rs  instance.rs  mod.rs  non_blocking.rs  pad.rs  pin_mux.rs  register.rs  uart_ext.rs
artinchip-hal/src/uart/pin_mux/: d13x.rs  macros.rs
artinchip-hal/src/wdog/: driver.rs  instance.rs  register.rs  wdog_ext.rs
artinchip-hal/src/wri/: info.rs  instance.rs  reason.rs  register.rs  wri_ext.rs
artinchip-hal/src/xspi/: instance.rs  register.rs
artinchip-rt/: Cargo.toml  build.rs
artinchip-rt/macros/: Cargo.toml
artinchip-rt/macros/src/: lib.rs
artinchip-rt/src/: core.rs  gpio.rs  lib.rs  macros.rs  marcos.rs  pbp.rs  soc.rs
artinchip-rt/src/core/: cache.rs  trap.rs
artinchip-rt/src/gpio/: function.rs  input.rs  mode.rs  output.rs  pad.rs
artinchip-rt/src/macros/: pin_mux.rs  soc.rs
artinchip-rt/src/soc/: d13x.rs
examples/pbp/pbp-async-uart/: Cargo.toml  README.md
examples/pbp/pbp-async-uart/src/: main.rs
examples/pbp/pbp-blinky/: Cargo.toml  README.md
examples/pbp/pbp-blinky/src/: main.rs
examples/pbp/pbp-boot-info/: Cargo.toml  README.md
examples/pbp/pbp-boot-info/src/: main.rs
examples/pbp/pbp-dma/: Cargo.toml  README.md
examples/pbp/pbp-dma/src/: main.rs
examples/pbp/pbp-flash/: Cargo.toml  README.md
examples/pbp/pbp-flash/src/: main.rs
examples/pbp/pbp-hello-world/: Cargo.toml  README.md
examples/pbp/pbp-hello-world/src/: main.rs
examples/pbp/pbp-i2c-master/: Cargo.toml  README.md
examples/pbp/pbp-i2c-master/src/: main.rs
examples/pbp/pbp-pwm/: Cargo.toml  README.md  build.rs
examples/pbp/pbp-pwm/src/: main.rs
