[package]
name = "aicfwc"
description = "Artinchip firmware converter"
version = "0.0.0"
edition = "2024"
authors = [
    "Zhouqi Jiang <luojia@openatom.club>",
    "Chongbing Yu <nanahigh@openatom.club>",
]

[dependencies]
clap = { version = "4", features = ["derive"] }
anyhow = "1"
md-5 = "0.10.6"
