[package]
name = "artinchip-rt"
version = "0.0.0"
edition = "2024"
authors = [
    "Zhouqi Jiang <luojia@openatom.club>",
    "Chongbing Yu <nanahigh@openatom.club>",
]

[dependencies]
artinchip-rt-macros = { version = "0.0.0", path = "macros" }
artinchip-hal = { version = "0.0.0", path = "../artinchip-hal" }
paste = "1.0"

[features]
d12x = []
d13x = []
d21x = []
g73x = []
m6800 = []
